--- a/scss/components/_find.scss
+++ b/scss/components/_find.scss
@@ -1,9 +1,9 @@
 .find {
     display: flex;
+    flex-direction: column;
 
     // .find__container
-    &__container {
-        width: 1090px;
+    &__container {        
         display: flex;
         flex-direction: column;
         flex-shrink: 1;
@@ -26,10 +26,12 @@
         font-size: 32px;
         font-weight: 500;
         line-height: normal;
+        margin-bottom: 24px;
 
         @media (min-width: $bp-desktop) {
             font-size: 64px;
             font-weight: 700;
+            margin-bottom: 32px;
         }
     }
 
@@ -37,8 +39,9 @@
 
     &__content {
         display: flex;
-        flex-direction: column-reverse;
-        gap: 24px;
+        // flex-direction: column-reverse;
+        align-items: center;
+        // gap: 24px;
         width: 100%;
 
         @media (min-width: $bp-desktop) {
@@ -49,13 +52,25 @@
     // .find__map
 
     &__map {
+        display: none;
         width: 100%;
-        border-radius: 24px;
-        max-height: 230px;
+        // border-radius: 24px;
 
         @media (min-width: $bp-desktop) {
+            display: flex;
             width: 60%;
+            max-height: 480px;
             border-radius: 32px;
+        }
+    }
+
+    &__map-mobile {
+        width: 100%;
+        max-height: 230px;
+        margin-top: 24px;
+
+        @media (min-width: $bp-desktop) {
+            display: none;
         }
     }
 
@@ -73,6 +88,7 @@
         @media (min-width: $bp-desktop) {
             width: 40%;
             border-radius: 32px;
+            padding: 48px 75px;
         }
     }
 
@@ -94,10 +110,17 @@
         font-weight: 600;
         line-height: normal;
         margin-bottom: 24px;
+
+        @media (min-width: $bp-desktop) {
+            margin-bottom: 32px;
+        }
     }
 
     &__form-field {
         margin-bottom: 16px;
+        @media (min-width: $bp-desktop) {
+            margin-bottom: 20px;
+        }
     }
 
     &__form-input {
@@ -126,7 +149,17 @@
     //     display: none;
     // }
 
-    &__form-btn {        
+    &__form-btn {
         width: 240px;
+        margin-bottom: 8px;
+    }
+
+    &__form-confidantials {
+        max-width: 205px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 18px;
+        color: var(--beauty-landing-25);
+        text-align: center;
     }
 }
