--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,5 +1,6 @@
 :root {
     --beauty-landing-2-c-1: #011c44;
+    --beauty-landing-2-c-3: #4A4A4A;
     --beauty-landing-2-c-2: #2b7fff;
     --beauty-landing-25: #747272;
 }
