--- a/scss/components/_choose.scss
+++ b/scss/components/_choose.scss
@@ -1,9 +1,10 @@
 .choose {
     padding-top: 104px;
-    background-image: url(/images/background.png);
-    background-size: cover;
+    background-image: url(../images/background.png);
+    background-size: auto;
     background-position-x: center;
-    
+    background-position-y: -60px;
+
     // .choose__container
 
     &__container {
@@ -34,7 +35,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: #FFF;
+        background: #fff;
         padding: 24px 32px;
         border-radius: 32px;
         box-shadow: 0px 4px 4px 0px rgba(168, 198, 245, 0.38);
@@ -42,7 +43,7 @@
 
     &__card .icon {
         margin-bottom: 12px;
-        fill: var(--beauty-landing-2-c-2) ;
+        fill: var(--beauty-landing-2-c-2);
     }
 
     &__card-text {
