--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,10 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/header';
+@import './components/hero';
 @import './components/choose';
+@import './components/procedures';
+@import './components/modal';
 @import './utils/mixins';
 
 //<Шрифт по умолчанию>==========================================================================================
