--- a/scss/components/_find.scss
+++ b/scss/components/_find.scss
@@ -95,22 +95,14 @@
 
     // .find__form
     &__form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 75%;
+        
+        // width: 75%;
 
         @media (min-width: $bp-desktop) {
         }
     }
 
-    &__form-title {
-        width: 270px;
-        text-align: center;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
+    &__form-title {        
         margin-bottom: 24px;
 
         @media (min-width: $bp-desktop) {
@@ -118,50 +110,11 @@
         }
     }
 
-    &__form-field {
-        margin-bottom: 16px;
-        @media (min-width: $bp-desktop) {
-            margin-bottom: 20px;
-        }
-    }
-
-    &__form-input {
-        width: 240px;
-        padding: 16px 24px;
-        border-radius: 24px;
-        border: 1px solid var(--beauty-landing-25, #747272);
-        background-color: var(--beauty-landing-2-c-1);
-        color: white;
-    }
-
-    &__form-input:focus {
-        outline: none;
-        color: white;
-    }
-
-    &__form-input::placeholder {
-        font-family: 'Roboto';
-        font-size: 13px;
-        font-weight: 400;
-        color: white;
-        display: inline;
-    }
-
-    // &__form-label {
-    //     display: none;
-    // }
 
     &__form-btn {
         width: 240px;
         margin-bottom: 8px;
     }
 
-    &__form-confidantials {
-        width: 205px;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 18px;
-        color: var(--beauty-landing-25);
-        text-align: center;
-    }
+    
 }
