--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -10,21 +10,119 @@
 }
 
 .modal {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 725px;
-    height: 680px;
+
     border-radius: 24px;
     background-color: var(--beauty-landing-2-c-1);
     padding: 42px 24px;
     color: white;
 
+    @media (min-width: $bp-tablet) {
+        width: 625px;
+        height: 580px;
+    }
+
     @media (min-width: $bp-desktop) {
+        width: 725px;
+        height: 680px;
         border-radius: 32px;
         padding: 48px 144px;
     }
 
-    .modal 
+    &__header {
+        text-align: center;
+        max-width: 220px;
+        font-size: 28px;
+        margin-bottom: 20px;
+
+        @media (min-width: $bp-tablet) {
+            max-width: 385px;
+            font-size: 48px;
+            // margin-bottom: 20px;
+        }
+
+        @media (min-width: $bp-desktop) {
+            max-width: 435px;
+            font-size: 64px;
+            font-weight: 700;
+            margin-bottom: 40px;
+        }
+    }
+}
+
+.close {
+    position: absolute;
+    top: 22px;
+    right: 22px;
+    cursor: pointer;
+
+    @media (min-width: $bp-desktop) {
+        top: 42px;
+    right: 42px;
+    }
+}
+
+.form-title {
+    width: 270px;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 24px;
+
+    @media (min-width: $bp-desktop) {
+        margin-bottom: 32px;
+    }
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-field {
+    margin-bottom: 16px;
+    @media (min-width: $bp-desktop) {
+        margin-bottom: 20px;
+    }
+}
+
+.form-input {
+    width: 240px;
+    padding: 16px 24px;
+    border-radius: 24px;
+    border: 1px solid var(--beauty-landing-25);
+    background-color: var(--beauty-landing-2-c-1);
+
+    @media (min-width: $bp-desktop) {
+        padding: 18px 33px;
+    }
+}
+
+.form-input::placeholder {
+    font-family: 'Roboto';
+    font-size: 13px;
+    font-weight: 400;
+    color: white;
+    display: inline;
+}
+
+.form-input:focus {
+    outline: none;
+    color: white;
+}
+
+.form-confidantials {
+    width: 208px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    color: var(--beauty-landing-25);
+    text-align: center;
 }
