--- a/scss/components/_links.scss
+++ b/scss/components/_links.scss
@@ -1,4 +1,5 @@
 .confidantials__link {
     color: var(--beauty-landing-25);
-    text-decoration: underline;
+    text-decoration-line: underline;
+    text-underline-offset: 2px;
 }
