--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -4,6 +4,10 @@
     left: 0;
     width: 100%;
 
+    &__container {
+        position: relative;
+    }
+
     &__nav {
         display: none;
 
@@ -14,10 +18,20 @@
             gap: 40px;
         }
     }
+}
 
-    &__burger {
-        @media screen and (min-width: $bp-desktop) {
-            display: none;
-        }
+.burger {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    width: 24px;
+    height: 24px;
+
+    @media screen and (min-width: $bp-desktop) {
+        display: none;
+    }
+
+    &__menu {
+        fill: #fff;
     }
 }
