--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,6 +1,13 @@
 .hero {
     padding-top: 70px;
-    background-image:  linear-gradient(57deg, #FFF 20.92%, rgba(255, 255, 255, 0.78) 44.46%, rgba(255, 255, 255, 0.20) 58.9%, rgba(255, 255, 255, 0.00) 72.45%), url(../images/nurse.jpg),;
+    background-image: linear-gradient(
+            57deg,
+            #fff 20.92%,
+            rgba(255, 255, 255, 0.78) 44.46%,
+            rgba(255, 255, 255, 0.2) 58.9%,
+            rgba(255, 255, 255, 0) 72.45%
+        ),
+        url(../images/nurse.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -27,8 +34,8 @@
         text-transform: capitalize;
         font-size: 54px;
         font-weight: 700;
-line-height: 46px;
-margin-bottom: 32px;
+        line-height: 46px;
+        margin-bottom: 32px;
     }
 
     &__btn {
