--- a/scss/components/_procedures.scss
+++ b/scss/components/_procedures.scss
@@ -19,6 +19,7 @@
 
     &__content {
         display: flex;
+        align-items: center;
         gap: 32px;
     }
 
@@ -26,21 +27,37 @@
 
     &__cards {
         display: flex;
+        flex-wrap: wrap;
         gap: 16px;
+        margin-bottom: 32px;
     }
 
     &__card {
         position: relative;
         width: 345px;
         height: 455px;
+        // flex-basis: calc((100%-40px)/3);
         border-radius: 4px 120px;
-        background: #d9d9d9;
+        // background: #d9d9d9;
         background: linear-gradient(
             180deg,
             rgba(1, 28, 68, 0) 48.53%,
             rgba(1, 28, 68, 0.73) 84.61%,
             #011c44 101.39%
         );
+        transition: transform 0.3s;
+
+        &:hover {
+            transform: scale(1.05);
+        }
+    }
+
+    &__card-image {
+        position: absolute;
+        width: 345px;
+        height: 455px;
+        border-radius: 4px 120px;
+        z-index: -1;
     }
 
     &__card-text {
@@ -58,9 +75,26 @@
 }
 
 .carusel {
+    display: none;
+
+    @media screen and (min-width: $bp-desktop) {
+        display: block;
+    }
 }
 
 .carusel-arrow {
+    width: 44px;
+    height: 44px;
+    background: #fff;
+    border: solid 3px;
+    border-radius: 50%;
+    padding: 10px;
+
+    &:hover {
+        background: var(--beauty-landing-2-c-2);
+        border-color: var(--beauty-landing-2-c-2);
+        fill: #fff;
+    }
 }
 .carusel-nav {
 }
