--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -13,9 +13,32 @@
 
         @media screen and (min-width: $bp-desktop) {
             display: flex;
+            justify-content: space-between;
             align-items: center;
             flex-grow: 1;
             gap: 40px;
+            padding-top: 42px;
+            padding-bottom: 42px;
+        }
+    }
+}
+
+.menu {
+
+    &__list {
+        display: flex;
+
+        @media screen and (min-width: $bp-desktop){
+        gap: 56px;
+        }
+    }
+
+    &__link {
+        color: var(--beauty-landing-2-c-1, #011C44);
+        @media screen and (min-width: $bp-desktop) {
+            font-size: 18px;
+            font-weight: 400;
+
         }
     }
 }
