--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,15 +3,25 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: rgba(255, 255, 255, 0.25);                                     
-    backdrop-filter: blur(5px);
+
+    @media screen and (min-width: $bp-desktop) {
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(5px);
+    }
 
     &__container {
         position: relative;
     }
 
     &__nav {
-        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #eff5ff;
+        transform: translateX(100%);
+        transition: transform 0.3s;
 
         @media screen and (min-width: $bp-desktop) {
             display: flex;
@@ -26,8 +36,6 @@
 }
 
 .menu {
-    
-    }
     &__list {
         display: flex;
 
@@ -50,21 +58,19 @@
 }
 
 .socials {
-
     &__list {
         display: flex;
         gap: 32px;
         color: var(--beauty-landing-2-c-1);
     }
 
-    
     &__icon {
         width: 32px;
         height: 32px;
     }
 }
 
-.burger {
+.burger__menu-btn {
     position: absolute;
     top: 16px;
     right: 16px;
@@ -75,14 +81,18 @@
         display: none;
     }
 
-    &__menu {
-        fill: #fff;
-    }
+    
+}
+
+.burger__menu-svg {
+    fill: #fff;
 }
 
 .logo {
-    &__img {
-        width: 74px;
-        height: 42px;
+    @media screen and (min-width: $bp-desktop) {
+        &__img {
+            width: 74px;
+            height: 42px;
+        }
     }
 }
