--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -1,10 +1,7 @@
 .header__nav {
-    
     &.active {
         display: block;
-        transform: translateX(0);        
-
-        
+        transform: translateX(0);
     }
 
     .logo {
@@ -13,6 +10,12 @@
         left: 20px;
         width: 57px;
         height: 30px;
+
+        @media screen and (min-width: $bp-desktop) {
+            position: static;
+            width: 74px;
+            height: 42px;
+        }
     }
 
     .menu__list {
@@ -22,12 +25,23 @@
         height: 70vh;
         font-size: 32px;
         padding-top: 50px;
+
+        @media screen and (min-width: $bp-desktop) {
+            flex-direction: row;
+            gap: 56px;
+            height: auto;
+            padding-top: 0;
+        }
     }
 
     .socials__list {
         height: 30vh;
         align-items: center;
         justify-content: center;
+
+        @media screen and (min-width: $bp-desktop) {
+            height: auto;
+        }
     }
 
     &__icon-close {
@@ -46,10 +60,13 @@
     // fill: var(--beauty-landing-2-c-1);
 }
 
-.burger__menu>.logo {
+.burger__menu > .logo {
     position: absolute;
     top: 16px;
     width: 54px;
     height: 30px;
-    
+
+    @media screen and (min-width: $bp-desktop) {
+        display: none;
+    }
 }
