--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,8 +1,9 @@
 :root {
     --beauty-landing-2-c-1: #011c44;
-    --beauty-landing-2-c-3: #4A4A4A;
+    --beauty-landing-2-c-3: #4a4a4a;
     --beauty-landing-2-c-2: #2b7fff;
     --beauty-landing-25: #747272;
+    --beauty-landing-2-c-6: #011f4a;
 }
 
 $bp-mobile: 480px;
