--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -23,6 +23,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @media screen and (min-width: $bp-desktop) {
+            align-items: start;
+        }
     }
 
     &__subtitle {
@@ -30,6 +34,10 @@
         font-weight: 400;
         line-height: 18px;
         margin-bottom: 10px;
+
+        @media screen and (min-width: $bp-desktop) {
+            margin-bottom: 16px;
+        }
     }
 
     // .hero__title
@@ -40,11 +48,23 @@
         font-weight: 700;
         line-height: 46px;
         margin-bottom: 32px;
+
+        @media screen and (min-width: $bp-desktop) {
+            font-size: 140px;
+            line-height: 114px;
+            max-width: 530px;
+            margin-bottom: 40px;
+        }
     }
 
     &__btn {
         font-size: 16px;
         margin-bottom: 8px;
+
+        @media screen and (min-width: $bp-desktop) {
+            margin-bottom: 14px;
+            font-size: 18px;
+        }
     }
 
     // .hero__text
@@ -52,5 +72,11 @@
     &__text {
         text-align: center;
         color: var(--beauty-landing-2-c-3);
+
+        @media screen and (min-width: $bp-desktop) {
+            text-align: left;
+            font-size: 12px;            
+            line-height: 18px;
+        }
     }
 }
