--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -6,12 +6,24 @@
     padding-top: 42px;
     padding-bottom: 66px;
 
+    &__container {
+        display: flex;
+        justify-content: center;
+    }
+
     // .footer__nav
 
     &__nav {
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @media (min-width: $bp-desktop) {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-start;
+            width: 100%;
+        }
     }
 }
 .logo {
@@ -30,8 +42,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        @media (min-width: $bp-desktop) {
+            align-items: flex-start;
+        }
+
         gap: 16px;
         margin-bottom: 16px;
+    }
+
+    &__item.last-item {
+        @media (min-width: $bp-desktop) {
+            display: none;
+        }
     }
 
     // .menu__link
@@ -39,6 +61,23 @@
     &__link.footer-menu {
         font-size: 14px;
         color: #fff;
+    }
+}
+
+.address {
+    display: none;
+    @media (min-width: $bp-desktop) {
+        display: flex;
+        flex-direction: column;
+
+        & a {
+            color: #fff;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            margin-bottom: 16px;
+        }
     }
 }
 
