--- a/scss/components/_choose.scss
+++ b/scss/components/_choose.scss
@@ -1,9 +1,10 @@
 .choose {
     padding-top: 104px;
-    background-image: url(../images/background.png);
-    background-size: auto;
-    background-position-x: center;
-    background-position-y: -60px;
+    
+    // background-image: url(../images/background.png);
+    // background-size: auto;
+    // background-position-x: center;
+    // background-position-y: -60px;
 
     @media (min-width: $bp-desktop) {
         padding-bottom: 96px;
