--- a/scss/utils/_utils.scss
+++ b/scss/utils/_utils.scss
@@ -6,3 +6,7 @@
     height: 1px;
     overflow: hidden;
 }
+
+.wrapper {
+    background: linear-gradient( rgba(43, 127, 255, 0.20) 39.74%, rgba(43, 127, 255, 0.00) 54.16%, rgba(43, 127, 255, 0.00) 66.66%);;
+}
