--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -69,7 +69,7 @@
         }
     }
 
-    &__icon {
+    &__icon-1 {
         position: absolute;
         right: 22px;
         bottom: -40px;
@@ -78,8 +78,32 @@
         fill: var(--beauty-landing-2-c-6);
 
         @media screen and (min-width: $bp-desktop) {
+            width: 64px;
+            height: 64px;
             right: -225px;
-            bottom: 300px;
+            bottom: 280px;
+        }
+    }
+
+    &__icon-2 {
+        @media screen and (min-width: $bp-desktop) {
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            fill: var(--beauty-landing-2-c-2);
+            left: 475px;
+            top: 33px;
+        }
+    }
+
+    &__icon-3 {
+        @media screen and (min-width: $bp-desktop) {
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            fill: var(--beauty-landing-25);
+            right: 0;
+            top: 270px;
         }
     }
 
@@ -87,17 +111,19 @@
         display: none;
 
         @media screen and (min-width: $bp-desktop) {
+            position: relative;
             display: flex;
             flex-direction: column;
             gap: 40px;
         }
     }
 
-    &__image {
+    &__image {        
         width: 335px;
         height: 328px;
         border-radius: 50%;
 
+        
         &.second {
             margin-left: 170px;
         }
