--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +24,16 @@
             justify-content: space-between;
             align-items: flex-start;
             width: 100%;
+        }
+    }
+    &__bg {
+        display: none;
+
+        @media (min-width: $bp-desktop) {
+            display: block;
+            position: absolute;
+            right: 0;
+            bottom: 0;
         }
     }
 }
@@ -53,6 +64,15 @@
     &__item.last-item {
         @media (min-width: $bp-desktop) {
             display: none;
+        }
+    }
+
+    &__item.confidential-desktop {
+        display: none;
+        @media (min-width: $bp-desktop) {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
         }
     }
 
@@ -92,6 +112,17 @@
 
     &__icon.footer-menu {
         fill: white;
+    }
+}
+
+.rights-mobile {
+    color: var(--beauty-landing-25, #747272);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+
+    @media (min-width: $bp-desktop) {
+        display: none;
     }
 }
 
