--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -15,6 +15,11 @@
 
     @media screen and (min-width: $bp-desktop) {
         padding-top: 123px;
+    //     -webkit-mask-image: url(../images/bgH.svg);
+    // mask-image: url(../images/bgH.svg);
+    // mask-position: center bottom;
+    // mask-size: 3000px 1500px;
+    // mask-repeat: no-repeat;
     }
 
     // .hero__container
