--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 3;
 
     @media screen and (min-width: $bp-desktop) {
         background: rgba(255, 255, 255, 0.25);
