--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -1,5 +1,6 @@
 .about {
     position: relative;
+    padding-top: 40px;
 
     @media screen and (min-width: $bp-desktop) {
         display: flex;
