--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -1,7 +1,10 @@
 .hero {
+    display: flex;
+    position: relative;
+    z-index: 2;
     padding-top: 70px;
     background-image: linear-gradient(
-            57deg,
+            87deg,
             #fff 20.92%,
             rgba(255, 255, 255, 0.78) 44.46%,
             rgba(255, 255, 255, 0.2) 58.9%,
@@ -13,21 +16,22 @@
     background-size: cover;
     padding-bottom: 60px;
 
-    @media screen and (min-width: $bp-desktop) {
+    @media screen and (min-width: $bp-desktop) {        
+        min-height: 658px;
+        flex: 1 0;        
         padding-top: 123px;
-    //     -webkit-mask-image: url(../images/bgH.svg);
-    // mask-image: url(../images/bgH.svg);
-    // mask-position: center bottom;
-    // mask-size: 3000px 1500px;
-    // mask-repeat: no-repeat;
+        padding-bottom: 130px;               
     }
 
     // .hero__container
 
     &__container {
+        z-index: -5;
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
+        
 
         @media screen and (min-width: $bp-desktop) {
             align-items: start;
