--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
     display: flex;
+    align-items: center;
     position: relative;
     z-index: 2;
     padding-top: 70px;
@@ -16,8 +17,13 @@
     background-size: cover;
     padding-bottom: 60px;
 
+    @media screen and (min-width: 565px) {
+        min-height:687px ;
+    }
+
     @media screen and (min-width: $bp-desktop) {        
         min-height: 658px;
+        height: 100vh;
         flex: 1 0;        
         padding-top: 123px;
         padding-bottom: 130px;               
