--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -1,6 +1,7 @@
 .about {
     position: relative;
     padding-top: 40px;
+    padding-bottom: 60px;
 
     @media screen and (min-width: $bp-desktop) {
         display: flex;
